2010-10-05  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * Makefile.am, contrib/Makefile.am, contrib/sally_struct2mat.m: added contrib
  directory and simple matlab function

2010-10-01  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * doc/sally.pod: updated manpage

  * doc/example.cfg, src/fvec/fmath.c, src/fvec/fmath.h, src/fvec/fvec.c,
  src/sconfig.c: removed trim functionality as it badly interfers with
  normalization and tfidf

  * doc/example.cfg, src/fvec/fmath.c, src/fvec/fmath.h, src/fvec/fvec.c,
  src/sconfig.c: support to trim min. and max. of dimensions

  * CHANGES, configure.in, doc/Makefile.am: new minor update

  * doc/example.cfg, src/output/output_matlab.c: support for exporting features
  to matlab

  * src/output/output_matlab.c, src/output/output_matlab.h: added label to
  matlab struct

  * compile, doc/example.cfg, src/output/output_matlab.c, src/sconfig.c:
  feature vectors are now converted to matlab structs

  * doc/doxygen.cfg, src/input/input_arc.c, src/input/input_dir.c,
  src/input/input_fasta.c, src/input/input_lines.c, src/output/output_libsvm.c,
  src/output/output_matlab.c, src/output/output_text.c: improved documentation
  of output and input modules

  * src/output/output_matlab.c: started rewrite of matlab module

2010-09-30  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * CHANGES, MANPAGE, Makefile.am, README, TODO, configure.in, doc/Makefile.am,
  doc/git2changes.py: updated documentation

  * src/input/input_fasta.c: replaced strlcat with strncat for compatibility.
  got a bad feeling now

2010-09-29  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * README: update to README

  * doc/sally.pod: spell fixes in manual

  * configure.in, doc/example.cfg: release version 0.5.0

2010-09-28  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * README, doc/sally.pod: another minor fix to manual

  * README, doc/sally.pod: further extensions to manual

  * README, doc/sally.pod: minor fix to manual

  * TODO: new TODOs
