@@ -4,7 +4,7 @@
 AUTOMAKE_OPTIONS = foreign
 SUBDIRS = src doc tests contrib .
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = README MANPAGE COPYING CHANGES
+EXTRA_DIST = README COPYING CHANGES
 
 clean-local:
 	rm -f *~
